fixed modal dropdown not working on mobile

--- a/src/components/Dropdown.css
+++ b/src/components/Dropdown.css
@@ -2,8 +2,12 @@
     cursor: pointer;
 }
 
-option:hover {
+.menu-item:hover {
     color: #793AFF;
+}
+
+.inputWrap {
+    cursor: pointer;
 }
 
 .x {
